--- a/src/main/resources/ru/nucodelabs/gem/view/charts/MisfitStacks.fxml
+++ b/src/main/resources/ru/nucodelabs/gem/view/charts/MisfitStacks.fxml
@@ -20,8 +20,8 @@
         <HBox HBox.hgrow="ALWAYS"/>
         <Label fx:id="text" styleClass="uclabel" text="-" VBox.vgrow="NEVER"/>
     </HBox>
-    <LineChart fx:id="lineChart" VBox.vgrow="ALWAYS" maxHeight="Infinity" maxWidth="Infinity" title="\%"
-               titleSide="LEFT" minHeight="0" minWidth="0" animated="false">
+    <LineChart fx:id="lineChart" VBox.vgrow="ALWAYS" maxHeight="Infinity" maxWidth="Infinity"
+               minHeight="0" minWidth="0" animated="false" styleClass="padded-chart" legendVisible="false">
         <xAxis>
             <LogarithmicAxis fx:id="lineChartXAxis"
                              side="BOTTOM" minorTickVisible="false" tickLabelsVisible="false" tickMarkVisible="false"
@@ -34,7 +34,8 @@
                         upperBound="200.0"
                         lowerBound="-200.0"
                         minorTickCount="2"
-                        tickUnit="100.0">
+                        tickUnit="100.0"
+                        label="\%">
                 <prefWidth>
                     <UIConstantsKt fx:constant="LEFT_AXIS_WIDTH"/>
                 </prefWidth>
