--- a/src/main/resources/ru/nucodelabs/gem/view/charts/PseudoSection.css
+++ b/src/main/resources/ru/nucodelabs/gem/view/charts/PseudoSection.css
@@ -1,4 +1,6 @@
 .chart-symbol {
+    -fx-shape: null;
+    -fx-animated: false;
     -fx-background-color: transparent;
     -fx-border-color: black;
     -fx-border-width: 1;
