--- a/src/main/resources/ru/nucodelabs/gem/view/charts/ModelSection.fxml
+++ b/src/main/resources/ru/nucodelabs/gem/view/charts/ModelSection.fxml
@@ -17,7 +17,8 @@
         <Label text="Модель, разрез" styleClass="uclabel"/>
     </HBox>
     <PolygonChart fx:id="chart" maxWidth="Infinity"
-                  maxHeight="Infinity" animated="false" legendVisible="false" styleClass="padded-chart">
+                  maxHeight="Infinity" animated="false" legendVisible="false" styleClass="padded-chart"
+                  VBox.vgrow="ALWAYS">
         <xAxis>
             <NumberAxis fx:id="xAxis" label="%x" side="BOTTOM" autoRanging="false"
                         minorTickVisible="false" tickUnit="25"/>
