--- a/src/main/resources/ru/nucodelabs/gem/view/tables/ModelTable.fxml
+++ b/src/main/resources/ru/nucodelabs/gem/view/tables/ModelTable.fxml
@@ -22,6 +22,10 @@
         <placeholder>
             <VBox alignment="CENTER" fx:id="dragDropPlaceholder" spacing="5" minHeight="0"
                   onDragOver="#dragOverHandle" onDragDropped="#dragDropHandle">
+                <HBox spacing="5" VBox.vgrow="NEVER" alignment="CENTER">
+                    <Button fx:id="copyFromLeftBtn" text="Использовать предыдущую" onAction="#copyFromLeft"/>
+                    <Button fx:id="copyFromRightBtn" text="Использовать следующую" onAction="#copyFromRight"/>
+                </HBox>
                 <HBox alignment="BASELINE_CENTER" VBox.vgrow="NEVER">
                     <VBox alignment="BASELINE_CENTER">
                         <Button text="%import" onAction="#importMOD"/>
@@ -32,8 +36,6 @@
                     <Label text="%drag"/>
                 </HBox>
                 <Button text="Первичная модель" onAction="#makePrimaryModel"/>
-                <Button fx:id="copyFromLeftBtn" text="Использовать предыдущую" onAction="#copyFromLeft"/>
-                <Button fx:id="copyFromRightBtn" text="Использовать следующую" onAction="#copyFromRight"/>
             </VBox>
         </placeholder>
         <columns>
