--- a/src/main/resources/ru/nucodelabs/gem/view/tables/ExperimentalTable.fxml
+++ b/src/main/resources/ru/nucodelabs/gem/view/tables/ExperimentalTable.fxml
@@ -31,10 +31,11 @@
     <TableView fx:id="table" maxWidth="Infinity" minWidth="120" maxHeight="Infinity" VBox.vgrow="ALWAYS"
                editable="true">
         <columns>
+            <TableColumn fx:id="isHiddenCol" text="Отключить"/>
             <TableColumn maxWidth="35" prefWidth="35" sortable="false" text="№" styleClass="centered-column"
                          resizable="false" editable="false" fx:id="indexCol"/>
             <TableColumn fx:id="ab2Col" maxWidth="Infinity" minWidth="20.0" prefWidth="100.0"
-                         sortable="false" onEditCommit="#onEditCommit">
+                         sortable="false">
                 <graphic>
                     <Label text="%ab2">
                         <tooltip>
@@ -44,7 +45,7 @@
                 </graphic>
             </TableColumn>
             <TableColumn fx:id="mn2Col" maxWidth="Infinity" minWidth="20.0" prefWidth="100.0"
-                         sortable="false" onEditCommit="#onEditCommit">
+                         sortable="false">
                 <graphic>
                     <Label text="%mn2">
                         <tooltip>
@@ -55,7 +56,7 @@
             </TableColumn>
             <TableColumn fx:id="resistanceApparentCol" maxWidth="Infinity" minWidth="20.0"
                          prefWidth="100.0" sortable="false"
-                         onEditCommit="#onEditCommit">
+            >
                 <graphic>
                     <Label text="%resistanceApparent">
                         <tooltip>
@@ -66,7 +67,7 @@
             </TableColumn>
             <TableColumn fx:id="errorResistanceCol" maxWidth="Infinity" minWidth="20.0"
                          prefWidth="100.0" sortable="false"
-                         onEditCommit="#onEditCommit">
+            >
                 <graphic>
                     <Label text="%errorResistanceApparent">
                         <tooltip>
@@ -77,7 +78,7 @@
             </TableColumn>
             <TableColumn fx:id="amperageCol" maxWidth="Infinity" minWidth="20.0" prefWidth="100.0"
                          sortable="false"
-                         onEditCommit="#onEditCommit">
+            >
                 <graphic>
                     <Label text="%amperage">
                         <tooltip>
@@ -87,7 +88,7 @@
                 </graphic>
             </TableColumn>
             <TableColumn fx:id="voltageCol" maxWidth="Infinity" minWidth="20.0" prefWidth="100.0"
-                         sortable="false" onEditCommit="#onEditCommit">
+                         sortable="false">
                 <graphic>
                     <Label text="%voltage">
                         <tooltip>
