--- a/src/main/resources/ru/nucodelabs/gem/view/tables/ModelTable.fxml
+++ b/src/main/resources/ru/nucodelabs/gem/view/tables/ModelTable.fxml
@@ -42,8 +42,7 @@
             <TableColumn fx:id="indexCol" maxWidth="35" prefWidth="35" sortable="false" text="№"
                          styleClass="centered-column"
                          resizable="false" editable="false"/>
-            <TableColumn fx:id="powerCol" maxWidth="Infinity" minWidth="20.0" prefWidth="100.0"
-                         sortable="false" onEditCommit="#onEditCommit">
+            <TableColumn fx:id="powerCol" maxWidth="Infinity" minWidth="20.0" prefWidth="100.0" sortable="false">
                 <graphic>
                     <Label text="%power">
                         <tooltip>
@@ -52,8 +51,7 @@
                     </Label>
                 </graphic>
             </TableColumn>
-            <TableColumn fx:id="resistanceCol" maxWidth="Infinity" minWidth="20.0" prefWidth="100.0"
-                         sortable="false" onEditCommit="#onEditCommit">
+            <TableColumn fx:id="resistanceCol" maxWidth="Infinity" minWidth="20.0" prefWidth="100.0" sortable="false">
                 <graphic>
                     <Label text="%resistance">
                         <tooltip>
