--- a/src/main/resources/ru/nucodelabs/gem/view/charts/MisfitStacks.fxml
+++ b/src/main/resources/ru/nucodelabs/gem/view/charts/MisfitStacks.fxml
@@ -16,9 +16,9 @@
       VBox.vgrow="ALWAYS"
       fx:controller="ru.nucodelabs.gem.view.charts.MisfitStacksController">
     <HBox maxWidth="Infinity">
-        <Label styleClass="uclabel" text="%misfit" VBox.vgrow="NEVER"/>
+        <Label styleClass="chart-label" text="%misfit" VBox.vgrow="NEVER"/>
         <HBox HBox.hgrow="ALWAYS"/>
-        <Label fx:id="text" styleClass="uclabel" text="-" VBox.vgrow="NEVER"/>
+        <Label fx:id="text" styleClass="chart-label" text="-" VBox.vgrow="NEVER"/>
     </HBox>
     <LineChart fx:id="lineChart" VBox.vgrow="ALWAYS" maxHeight="Infinity" maxWidth="Infinity"
                minHeight="0" minWidth="0" animated="false" styleClass="padded-chart" legendVisible="false">
