colormap + exp table fix

--- a/src/main/resources/ru/nucodelabs/gem/view/charts/ColorAxis.fxml
+++ b/src/main/resources/ru/nucodelabs/gem/view/charts/ColorAxis.fxml
@@ -32,6 +32,7 @@
                         </HBox>
                         <TextField promptText="Число сегментов" fx:id="numberOfSegmentsTf"/>
                         <CheckBox fx:id="isLogChkBox" text="Логарифмический масштаб"/>
+                        <Label fx:id="fileLbl" styleClass="sub-label"/>
                     </VBox>
                 </Scene>
             </scene>
