--- a/src/main/resources/ru/nucodelabs/gem/view/charts/CurvesPseudoSection.fxml
+++ b/src/main/resources/ru/nucodelabs/gem/view/charts/CurvesPseudoSection.fxml
@@ -19,7 +19,7 @@
         <Label text="%pseudoSection" styleClass="chart-label"/>
     </HBox>
     <LineChart fx:id="chart" VBox.vgrow="ALWAYS" maxHeight="Infinity" maxWidth="Infinity" minWidth="0" animated="false"
-               minHeight="0"
+               minHeight="0" axisSortingPolicy="NONE"
                legendVisible="false" styleClass="padded-chart">
         <xAxis>
             <NucodeNumberAxis fx:id="xAxis" side="BOTTOM" label="%x" minorTickVisible="false" tickUnit="25"
