--- a/src/main/resources/ru/nucodelabs/gem/view/charts/CurvesPseudoSection.fxml
+++ b/src/main/resources/ru/nucodelabs/gem/view/charts/CurvesPseudoSection.fxml
@@ -16,7 +16,7 @@
       VBox.vgrow="ALWAYS"
       fx:controller="ru.nucodelabs.gem.view.charts.CurvesPseudoSectionController">
     <HBox alignment="CENTER_LEFT">
-        <Label text="%pseudoSection" styleClass="chart-label"/>
+        <Label fx:id="title" text="%pseudoSection" styleClass="chart-label"/>
     </HBox>
     <LineChart fx:id="chart" VBox.vgrow="ALWAYS" maxHeight="Infinity" maxWidth="Infinity" minWidth="0" animated="false"
                minHeight="0" axisSortingPolicy="NONE"
